# mcim

./: .gitignore  Cargo.toml  LICENSE  buf.gen.yaml  flake.nix  generate_certs.sh  go.mod  go.sum
.direnv/: flake-profile-1-link
.github/workflows/: ci.yml
cmd/server/: main.go
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  loader.rs  regex.rs  v1.rs  writer.rs
crates/config/tests/: error.rs  loader.rs  regex.rs  v1.rs  writer.rs
crates/config/tests/common/: mod.rs
internal/config/: config.go  config_test.go  types.go
internal/rpc/: server.go  service.go  service_test.go  types.go
internal/server/: server.go  service.go  service_test.go  types.go
scripts/: generate_certs.sh
src/: config.rs  error.rs  lib.rs  main.rs  model.rs
src/api/: handlers.rs  routes.rs
src/web/: handlers.rs  routes.rs
tests/: test_all.rs  test_server.rs
