[package]
name = "mci"
version = "0.1.0"
edition = "2021"

[lib]
name = "mci"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.9"
axum-macros = "0.4.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
anyhow = "1.0.82"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-rustls = { version = "0.25.0" }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }


[dev-dependencies]
reqwest = "0.12.4"
http-body-util = "0.1.1"
tower = { version = "0.4", features = ["full"] }
hyper = { version = "1", features = ["full"] }
mci = { path = ".", package = "mci" }
