[package]
name = "mci"
version = "0.1.0"
edition = "2021"

[lib]
name = "mci"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
tokio-rustls = { version = "0.26" }
tokio-postgres = "0.7.10"
axum = "0.8"
axum-macros = "0.5"
axum-server = { version = "0.8", features = ["tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15"
deadpool-postgres = "0.10.3"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.120"


[dev-dependencies]
reqwest = "0.13"
http-body-util = "0.1"
tower = { version = "0.5", features = ["full"] }
hyper = { version = "1.8", features = ["full"] }
mci = { path = ".", package = "mci" }
h2 = "0.4"
hyper-util = { version = "0.1", features = ["full"] }
